add no redirect query to download
